deps/crates/vendor/serde_json/tests/ui/unexpected_after_array_element.stderr
error: no rules expected `=>`
 --> tests/ui/unexpected_after_array_element.rs:4:18
  |
4 |     json!([ true => ]);
  |                  ^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
