deps/crates/vendor/serde_json/tests/ui/unexpected_after_array_element.rs
use serde_json::json;

fn main() {
    json!([ true => ]);
}
